Fixed #22658 - StyleSheet template isn't localized.

--- a/xml.core/src/org/netbeans/modules/xml/core/resources/Bundle.properties
+++ b/xml.core/src/org/netbeans/modules/xml/core/resources/Bundle.properties
@@ -22,7 +22,7 @@ Templates/XML/XMLWizard.xml=XML Document Wizard
 Templates/XML/XMLwithROOT.xml=XML Document
 Templates/XML/XMLwithDTD.xml=XML With DTD
 Templates/XML/xhtml.xml=XHTML Document
-Templates/XML/StyleSheet.xml=Extensible Style Sheet
+Templates/XML/StyleSheet.xsl=Extensible Stylesheet Language (XSL)
 Templates/XML/xml_entity.ent=XML Parsed Entity
 
 # JavaHelp
