--- a/api.xml/src/org/netbeans/spi/xml/cookies/Bundle.properties
+++ b/api.xml/src/org/netbeans/spi/xml/cookies/Bundle.properties
@@ -30,5 +30,5 @@ MSG_unknown_parser=Using {0} XML parser implementation from unknown location.
 # {0} message of original exception
 EX_parser_ierr=Probably internal parser error: {0}
 MSG_not_a_doc=Error: Validation can be used only for XML Documents!
-
+MSG_no_pid=empty public ID
 # ---
