IN=DEV merging the changes from orion_fcs branch into the trunk

--- a/web.monitor/src/org/netbeans/modules/web/monitor/client/Bundle.properties
+++ b/web.monitor/src/org/netbeans/modules/web/monitor/client/Bundle.properties
@@ -108,7 +108,7 @@ MON_Remote_Host=Client hostname
 MON_Remote_Address=Client IP address
 MON_Referer=Referer
 MON_Scheme=Scheme
-MON_Status=HTTP exit status
+MON_Status=HTTP exit status (as set by servlet)
 MON_No_data=No data was posted
 MON_Path_info=Path info
 
