--- a/web.monitor/build.xml
+++ b/web.monitor/build.xml
@@ -52,7 +52,7 @@ Microsystems, Inc. All Rights Reserved.
 
   <!-- These are the primary targets. -->
 
-  <target name="netbeans" depends="jars,javahelp"/>
+  <target name="netbeans" depends="jars,javahelp,release"/>
 
   <target name="nbm" depends="netbeans">
     <makenbm file="monitor.nbm"
@@ -107,13 +107,16 @@ Microsystems, Inc. All Rights Reserved.
     </locjar>
   </target>
 
-  <target name="release">
+  <target name="release" if="have-catalina" depends="compile-catalina-check">
+    <copy file="${nb_root}/schema2beans/netbeans/modules/schema2beans.jar" tofile="${nb_root}/tomcatint/tomcat40/netbeans/tomcat401/lib/schema2beans.jar"/>
+    <copy file="netbeans/modules/ext/httpmonitor.jar"                      tofile="${nb_root}/tomcatint/tomcat40/netbeans/tomcat401/lib/httpmonitor.jar"/>
+    <copy file="netbeans/modules/ext/monitor-valve.jar"                    tofile="${nb_root}/tomcatint/tomcat40/netbeans/tomcat401/server/lib/monior-valve.jar"/>
   </target>
 
 
   <target name="compile"
 	  depends="setup-jdkhome, compile-core, compile-server,
-		   compile-tomcat, compile-catalina"/>
+		   compile-catalina"/>
 
   <target name="compile-core">
     <javac srcdir="src" destdir="src"
@@ -129,7 +132,6 @@ Microsystems, Inc. All Rights Reserved.
          <pathelement location="${nb_root}/schema2beans/netbeans/modules/schema2beans.jar"/>
          <pathelement location="${binroot}/core/release/lib/ext/xerces.jar"/>
          <pathelement location="${servlet22}"/>
-         <pathelement location="${nb_root}/web/core/netbeans/modules/jsp.jar"/>
        </classpath>
      </javac>
   </target>
@@ -145,22 +147,6 @@ Microsystems, Inc. All Rights Reserved.
          <pathelement location="${binroot}/core/release/lib/ext/xerces.jar"/>
          <pathelement location="${nb_root}/schema2beans/netbeans/modules/schema2beans.jar"/>
          <pathelement location="${servlet23}"/>	
-       </classpath>
-     </javac>
-  </target>
-
-  <target name="compile-tomcat" depends="compile-server">
-
-    <javac srcdir="src" destdir="src"
-         deprecation="${build.compiler.deprecation}" 
-	 debug="${build.compiler.debug}"
-	 includes="**/monitor/tomcat/**,**/org/apache/tomcat/**"
-	 excludes="**/SCCS/**,**/CVS/**">
-
-       <classpath>
-          <pathelement location="${binroot}/httpserver/release/modules/ext/webserver.jar"/>
-         <pathelement location="${servlet23}"/>		
-         <pathelement location="${nb_root}/schema2beans/netbeans/modules/schema2beans.jar"/>
        </classpath>
      </javac>
   </target>
@@ -182,7 +168,7 @@ Microsystems, Inc. All Rights Reserved.
      </javac>
   </target>
 
-  <target name="jars" depends="compile,module-jars,catalina-jar,tomcat-monitor">
+  <target name="jars" depends="compile,module-jars,catalina-jar">
   </target>
 
   <target name="module-jars">
@@ -231,27 +217,13 @@ Microsystems, Inc. All Rights Reserved.
          compress="false">
       <fileset dir="src">
         <patternset excludesfile="${nb_root}/nbbuild/standard-jar-excludes.txt">
-          <include name="org/netbeans/modules/web/monitor/catalina/MonitorValve**"/>	
+          <include name="org/netbeans/modules/web/monitor/catalina/MonitorValve**"/> 
+
+          <include name="org/netbeans/modules/web/monitor/catalina/DispatchListener**"/>	
         </patternset>
       </fileset>
 
     </jar>
-  </target>
-
-  <!-- This target will be deprecated --> 
-  <target name="tomcat-monitor" depends="compile">
-    <locjar jarfile="netbeans/modules/ext/tomcat-monitor.jar"
-            compress="false">
-      <locale name="ja"/>
-      <fileset dir="src">
-        <patternset excludesfile="${nb_root}/nbbuild/standard-jar-excludes.txt">
-          <include name="org/apache/tomcat/core/"/>
-          <include name="org/netbeans/modules/web/monitor/data/"/>
-          <include name="org/netbeans/modules/web/monitor/server/"/>
-          <include name="org/netbeans/modules/web/monitor/tomcat/"/>
-        </patternset>
-      </fileset>
-    </locjar>
   </target>
 
 </project>
