The graphical merge implementation at least works, New MergeVisualizer is implemented and used as a service.

--- a/diff/src/org/netbeans/modules/merge/builtin/visualizer/Bundle.properties
+++ b/diff/src/org/netbeans/modules/merge/builtin/visualizer/Bundle.properties
@@ -9,17 +9,29 @@
 # Code is Sun Microsystems, Inc. Portions Copyright 1997-2000 Sun
 # Microsystems, Inc. All Rights Reserved.
 
-MergePanel.title=Merge
+# mf-layer.xml
+Services/MergeVisualizers=Merge Visualizers
+
+MergeDialogComponent.title=Merge
 MergePanel.nextButton.toolTipText=Next Difference
 MergePanel.nextButton.mnemonic=N
 MergePanel.prevButton.toolTipText=Previous Difference
 MergePanel.prevButton.mnemonic=P
+# Status of conflicts resolving:
+# {0} .. current conflict
+# {1} .. total number of conflicts
+# {2} .. number of unresolved conflicts
+MergePanel.statusLine=Conflict: {0} of {1}, Unresolved: {2}
 
 
 MergePanel.acceptLeftButton.text=Accept
 MergePanel.acceptAndNextLeftButton=Accept & Next
 MergePanel.acceptRightButton.text=Accept
 MergePanel.acceptAndNextRightButton=Accept & Next
+
+# Printed message, when the merge result saving fails.
+# {0} .. the localized message reported by the IOException
+MergeControl.failedToSave=Failed to save the merge result: {0}
 
 BTN_OK=OK
 
