Removed unneeded stuff, added display name and short description.

--- a/diff/src/org/netbeans/modules/merge/builtin/visualizer/Bundle.properties
+++ b/diff/src/org/netbeans/modules/merge/builtin/visualizer/Bundle.properties
@@ -12,7 +12,10 @@
 # mf-layer.xml
 Services/MergeVisualizers=Merge Visualizers
 
-MergeDialogComponent.title=Merge
+GraphicalMergeVisualizer.displayName=Graphical Merge Conflicts Resolver
+GraphicalMergeVisualizer.shortDescription=
+
+MergeDialogComponent.title=Merge Conflicts Resolver
 MergePanel.nextButton.toolTipText=Next Difference
 MergePanel.nextButton.mnemonic=N
 MergePanel.prevButton.toolTipText=Previous Difference
