Graphical merge visualizer has setters and getters for colors, BeanInfo added.

--- a/diff/src/org/netbeans/modules/merge/builtin/visualizer/Bundle.properties
+++ b/diff/src/org/netbeans/modules/merge/builtin/visualizer/Bundle.properties
@@ -15,6 +15,14 @@ Services/MergeVisualizers=Merge Visualizers
 GraphicalMergeVisualizer.displayName=Graphical Merge Conflicts Resolver
 GraphicalMergeVisualizer.shortDescription=
 
+# GraphicalMergeVisualizerBeanInfo
+PROP_colorUnresolvedConflict=Color of Text of Unresolved Conflict
+HINT_colorUnresolvedConflict=The background color of text of unresolved conflict.
+PROP_colorResolvedConflict=Color of Text Applied To Resolve Conflict
+HINT_colorResolvedConflict=The background color of text applied to resolve the conflict
+PROP_colorOtherConflict=Color of Text Not Applied To Resolve Conflict
+HINT_colorOtherConflict=The background color of text not applied to resolve the conflict
+
 MergeDialogComponent.title=Merge Conflicts Resolver
 MergePanel.nextButton.toolTipText=Next Difference
 MergePanel.nextButton.mnemonic=N
