Initial commit of the code completion database customizer

--- a/editor/src/org/netbeans/modules/editor/options/Bundle.properties
+++ b/editor/src/org/netbeans/modules/editor/options/Bundle.properties
@@ -72,6 +72,15 @@ HINT_javaDocPreferredSize=Preferred size of javaDoc popup window.
 PROP_javaDocAutoPopup=Auto Popup JavaDoc Window
 HINT_javaDocAutoPopup=If True, the javaDoc window automatically appears when appropriate.
 
+PROP_updatePDAfterMounting=Update Code Completion Database After Mounting
+HINT_updatePDAfterMounting=Mounted filesystem will be added into the Code Completion Database.
+
+PROP_deletePDAfterUnmounting=Delete Code Completion Database File After Unmounting
+HINT_deletePDAfterUnmounting=Unmounted filesystem will be removed from Code Completion Database
+
+PROP_parserDatabaseCustomizer=Code Completion Database Customizer
+HINT_parserDatabaseCustomizer=Code Completion Database Customizer
+
 PROP_expandTabs=Expand Tabs to Spaces
 HINT_expandTabs=If True, automatically converts tabs in the document to spaces padded to the same column.
 
@@ -781,6 +790,11 @@ PROP_indentEngine_spacesPerTab=Number of Spaces per Tab
 HINT_indentEngine_spacesPerTab=Number of spaces to be inserted when pressing tab.
 LAB_SimpleIndentEngine=Simple Indentation Engine
 HINT_SimpleIndentEngine=Simple indentation engine.
+
+# Update PD after FS mounting or delete PD after unmounting
+ALWAYS=Always
+NEVER=Never
+ASK=Ask
 
 
 # CaretTypeEditor
