--- a/testtools/src/org/netbeans/modules/testtools/templates/jellyTest.java.template
+++ b/testtools/src/org/netbeans/modules/testtools/templates/jellyTest.java.template
@@ -6,6 +6,7 @@
 
 package Templates.TestTools;
 
+import java.io.File;
 import java.io.IOException;
 import java.io.PrintStream;
 import java.io.PrintWriter;
@@ -16,6 +17,8 @@ import org.netbeans.junit.*;
 import org.netbeans.jemmy.*;
 import org.netbeans.jemmy.operators.*;
 import org.netbeans.jemmy.util.PNGEncoder;
+import org.netbeans.jemmy.util.Dumper;
+
 import org.netbeans.test.oo.gui.jam.*;
 import org.netbeans.test.oo.gui.jello.*;
 import org.netbeans.test.oo.gui.jelly.*;
@@ -30,6 +33,10 @@ public class jellyTest extends NbTestCase {
     /** screen capture feature in case of failure is enabled by default
      */
     public static boolean captureScreen = !Boolean.getBoolean("jemmy.disable.screen.capture");
+
+    /** screen XML dump feature in case of failure is enabled by default
+     */
+    public static boolean dumpScreen = !Boolean.getBoolean("jemmy.disable.screen.xmldump");
     
     /** constructor required by JUnit
      * @param testName method name to be used as testcase
@@ -48,25 +55,28 @@ public class jellyTest extends NbTestCase {
      */
     protected void setUp() throws IOException {
         JellyProperties.setJemmyDebugTimeouts();
-        PrintWriter log=new PrintWriter(getLog());
+        PrintWriter log=new PrintWriter(getLog(), true);
         JellyProperties.setJemmyOutput(log, log);
         JellyProperties.setJellyOutput(log, log);
         JamUtilities.waitEventQueueEmpty(2000);
     }
     
-    /** method called after each testcase<br>
-     * resets Jemmy WaitComponentTimeout
+    /** method called after each testcase
      */
     protected void tearDown() {
-        JemmyProperties.setCurrentOutput(TestOut.getNullOutput());
     }
     
     void fail(Exception e) {
         e.printStackTrace(getLog());
         if (captureScreen) {
             try {
-                PNGEncoder.captureScreen(getWorkDirPath()+"/screen.png");
-            } catch (IOException ioe) {}
+                PNGEncoder.captureScreen(getWorkDirPath()+File.separator+"screen.png");
+            } catch (Exception e1) {}
+        }
+        if (dumpScreen) {
+            try {
+                Dumper.dumpAll(getWorkDirPath()+File.separator+"screen.xml");
+            } catch (Exception e2) {}
         }
         throw new AssertionFailedExceptionError(e);
     }
