The result can be saved via the SaveAction action, also closing implemented. The MergePanel can provide actions, that are displayed on the popup. Conflict lines annotation in the result fixed.

--- a/diff/src/org/netbeans/modules/merge/builtin/visualizer/Bundle.properties
+++ b/diff/src/org/netbeans/modules/merge/builtin/visualizer/Bundle.properties
@@ -40,6 +40,10 @@ MergePanel.acceptAndNextLeftButton=Accept & Next
 MergePanel.acceptRightButton.text=Accept
 MergePanel.acceptAndNextRightButton=Accept & Next
 
+# {0} .. The name fo the file to be saved
+SaveFileQuestion=File {0} is modified. Save it?
+# {0} .. The number of files to be saved 
+SaveFilesQuestion={0} files are modified. Save them?
 # Printed message, when the merge result saving fails.
 # {0} .. the localized message reported by the IOException
 MergeControl.failedToSave=Failed to save the merge result: {0}
@@ -49,3 +53,5 @@ BTN_OK=OK
 BTN_Cancel=Cancel
 
 BTN_Help=Help
+
+CloseAction=Close
