--- a/debugger.jpda/src/org/netbeans/modules/debugger/jpda/Bundle.properties
+++ b/debugger.jpda/src/org/netbeans/modules/debugger/jpda/Bundle.properties
@@ -282,3 +282,39 @@ HINT_condition=Boolean expression determining if the debugger should stop on the
 CTL_Condition=Condition:
 CTL_Condition_mnemonic=C
 ACSD_CTL_Condition=Condition for this breakpoint
+
+#May be displayed during action "Fix" (class redefinition at runtime).
+EXC_No_class_files_found=No .class files found. Cannot redefine the class(es).
+
+#May be displayed during action "Fix" (class redefinition at runtime).
+EXC_Could_not_read_class_file=Error occured while reading file {0}.
+
+#Used by action "Fix & Continue". Before a class is redefined, it is compiled (updated).
+#This message is a name of the compiler task ("Finished Compile before fix [JPDA Debugger]").
+MSG_Compile_before_fix=Compile before fix [JPDA Debugger]
+
+#name of action "pop frames" in a context menu of a call stack line node
+CTL_Pop_to_here_action_name=Pop To Here
+
+#May be displayed when popping call stack frames (method calls).
+MSG_Cannot_pop_native_frames=Cannot pop native method calls.
+
+MSG_Old_frame_on_stack_title=Old Method on Stack
+
+#Displayed during action "Fix" of the topmost frame is associated with any of the classes that were just swapped.
+MSG_Old_frame_on_stack=The most recent call on the current stack belongs to one\nof the classes that you fixed. You can pop the call\nso that you will then call the new version.
+
+#Used in dialog (see MSG_Old_frame_on_stack) - option "Pop the frame".
+MSG_Old_frame_on_stack_pop_frame=&Pop Call
+
+#Used in dialog (see MSG_Old_frame_on_stack) - option "Leave the frame".
+MSG_Old_frame_on_stack_leave_frame=&Leave Call
+
+#May be displayed during operation "Fix" if one or more classes could not be redefined.
+EXC_Cannot_redefine_class=An error occured during class redefinition. Operation was cancelled.
+
+#May be displayed during action "Fix".
+MSG_Unsupported_class_definition_changes=The remote JVM is not able to handle some changes in a class definition.\nOperation was cancelled.
+
+#Displayed in the Output Window in case that action "Fix" was successful.
+MSG_Redefined_classes=The following classes were fixed:
