--- a/web.core/src/org/netbeans/modules/web/core/Bundle.properties
+++ b/web.core/src/org/netbeans/modules/web/core/Bundle.properties
@@ -121,6 +121,17 @@ HINT_scriptingLanguage=Language this page uses for scripting
 Templates/JSP_Servlet=JSP & Servlet
 Templates/JSP_Servlet/JSP.jsp=JSP
 Templates/JSP_Servlet/Servlet.java=Servlet
+
+Templates/JSP_Servlet/Filters=Filters
+Templates/JSP_Servlet/Filters/SimpleFilter.java=Simple Filter
+Templates/JSP_Servlet/Filters/AdvancedFilter.java=Advanced Filter
+
+Templates/JSP_Servlet/Listeners=Listeners
+Templates/JSP_Servlet/Listeners/ContextListener.java=Servlet Contex Listener
+Templates/JSP_Servlet/Listeners/ContextAttributeListener.java=Servlet Context Attribute Listener
+Templates/JSP_Servlet/Listeners/SessionListener.java=Http Session Listener
+Templates/JSP_Servlet/Listeners/SessionAttributeListener.java=Http Session Attribute Listener
+
 Services/org-netbeans-modules-web-core-ServletSettings.settings=JSP & Servlet
 # Javadoc
 Mount/java/org-netbeans-modules-web-core-resources-library-servlet.xml=Servlet 2.3 API Library
