--- a/testtools/src/org/netbeans/modules/testtools/templates/functional__build-.xml.template
+++ b/testtools/src/org/netbeans/modules/testtools/templates/functional__build-.xml.template
@@ -22,16 +22,14 @@ Microsystems, Inc. All Rights Reserved.
     
         <!-- During filling classpathes remember that only <module>/test 
 	     is checked out during automated test execution so <module>/src 
-	     or <module>/netbeans isn't available. If you need to add something 
-	     from <module>/src or <module>/netbeans to classpath, 
-	     look below to "setting advanced claspathes" part of this target.
+	     or <module>/netbeans isn't available. 
           -->            
          
         <property name="jemmy.home" location="../../../nbextra/jemmy"/>
         <property name="jelly.home" location="../../../nbextra/jelly"/>
 		 
         <!-- List of directories where jars will be searched. -->
-        <property name="xtest.extra.jars.path" location="${jemmy.home};${jelly.home}"/>
+        <property name="xtest.extra.jars.path" value="${jemmy.home};${jelly.home}"/>
       
         <!-- This jars is used for compilation, execution codetests and also for
              execution ide tests (it means this classpath will be mounted in repository).
@@ -39,7 +37,7 @@ Microsystems, Inc. All Rights Reserved.
              this file will be searched in directories specified by property xtest.extra.jars.path 
                  example: <property name="xtest.extra.jars" value="jemmy.jar;jelly.jar"/>
           -->
-        <property name="xtest.extra.jars"     value=""/>
+        <property name="xtest.extra.jars" value=""/>
 
         <!-- These jars will be copied to directory ${netebans.home}/lib/ext.
 	     Again you can write only name of jar or zip file, not in which directory it is and 
@@ -66,6 +64,9 @@ Microsystems, Inc. All Rights Reserved.
                  example: <property name="xtest.ide.commandline.suffix" value="-J-Dxtest.useclassloader=org.openidex.util"/>
           -->
         <property name="xtest.ide.commandline.suffix" value=""/>
+
+	<!-- This classpath is beside jars in xtest.extra.jars also used for compilation. -->
+	<property name="compiletest.classpath" classpath=""/>
         
     </target>
     
