bugfix #22781 - LookupNode used instead of EnvironmentNode, display name and icon now specified through layers.

--- a/o.n.core/src/org/netbeans/core/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/Bundle.properties
@@ -70,10 +70,6 @@ CTL_Desktop_name=Desktop
 CTL_Desktop_hint=The Desktop is the main root of objects in the IDE.
 CTL_Project_Settings=Project Settings
 CTL_Project_Settings_Hint=Contains project-specific settings.
-CTL_session_name=Options
-CTL_Session_Settings_Hint=Contains global IDE preferences.
-CTL_environment_name=Runtime
-CTL_Environment_Hint=Represents aspects of the running state of the IDE.
 CTL_roots_name=Roots
 
 #Session Settings Subnodes
@@ -591,6 +587,8 @@ EXC_sax_parse=Parse error in file {1} (PUBLIC {0})
 # {3} - line #
 EXC_sax_parse_col_line=Parse error in file {1} line {3} column {2} (PUBLIC {0})
 
+UI/Services=Options
+# UI/Service_Hint=Contains global IDE preferences.
 UI/Services/DebuggingAndExecuting=Debugging and Executing
 UI/Services/IDEConfiguration=IDE Configuration
 UI/Services/IDEConfiguration/LookAndFeel=Look and Feel
@@ -599,6 +597,8 @@ UI/Services/IDEConfiguration/ServerAndExternalToolSettings=Server and External T
 UI/Services/SourceCreationAndManagement=Source Creation and Management
 UI/Services/Editing=Editing
 UI/Services/Building=Building
+UI/Runtime=Runtime
+# UI/Runtime_Hint=Represents aspects of the running state of the IDE.
 Services/org-netbeans-core-execution-ExecutionSettings.settings=Execution Settings
 Services/org-openide-src-nodes-SourceOptions.settings=Java Elements
 Services/org-netbeans-core-output-OutputSettings.settings=Output Window
