--- a/xml.catalog/src/org/netbeans/modules/xml/catalog/Bundle.properties
+++ b/xml.catalog/src/org/netbeans/modules/xml/catalog/Bundle.properties
@@ -47,6 +47,9 @@ LBL_mount=Mount Catalog...
 
 ## RefreshAction.java
 LBL_Action=Refresh
+MSG_refreshed=Catalog refreshed!
+# {0} stays for catalog name
+MSG_refreshing=Refreshing {0}...
 
 ## Catalog Node
 LBL_unmount=Unmount Catalog
