--- a/testtools/src/org/netbeans/modules/testtools/templates/unit__build-.xml.template
+++ b/testtools/src/org/netbeans/modules/testtools/templates/unit__build-.xml.template
@@ -66,7 +66,7 @@ Microsystems, Inc. All Rights Reserved.
         <property name="xtest.ide.commandline.suffix" value=""/>
 
 	<!-- This classpath is beside jars in xtest.extra.jars also used for compilation. -->
-	<property name="compiletest.classpath" classpath=""/>
+	<property name="compiletest.classpath" value=""/>
         
     </target>
     
