* Xalan 2.3.1 upgrade. * Libs moved to xml/libs and org.netbeans.libs packages. * Soft (Provides/Requires) dependency on httpserver module.

--- a/nbbuild/build.xml
+++ b/nbbuild/build.xml
@@ -499,14 +499,14 @@ ToDo:
       <ant dir="../xml/core" target="netbeans"/>
   </target>
 
-  <target name="all-xml/core/xalan">
-      <echo message="Building module xml/core/xalan..."/>
-      <ant dir="../xml/core/xalan" target="netbeans"/>
+  <target name="all-xml/libs/xalan">
+      <echo message="Building module xml/libs/xalan..."/>
+      <ant dir="../xml/libs/xalan" target="netbeans"/>
   </target>
 
-  <target name="all-xml/core/jaxp">
-      <echo message="Building module xml/core/jaxp..."/>
-      <ant dir="../xml/core/jaxp" target="netbeans"/>
+  <target name="all-xml/libs/jaxp">
+      <echo message="Building module xml/libs/jaxp..."/>
+      <ant dir="../xml/libs/jaxp" target="netbeans"/>
   </target>
 
   <target name="all-xml/catalog" depends="all-openide,all-xml/core">
@@ -534,7 +534,7 @@ ToDo:
       <ant dir="../xml/css" target="netbeans"/>
   </target>
 
-  <target name="all-xml" depends="all-xml/api,all-xml/tax,all-xml/core/xalan,all-xml/core/jaxp,all-xml/core,all-xml/catalog,all-xml/tools,all-xml/text-edit,all-xml/tree-edit,all-xml/css"/>
+  <target name="all-xml" depends="all-xml/api,all-xml/tax,all-xml/libs/xalan,all-xml/libs/jaxp,all-xml/core,all-xml/catalog,all-xml/tools,all-xml/text-edit,all-xml/tree-edit,all-xml/css"/>
 
   <target name="all-treefs" depends="all-openide">
     <echo message="Building module treefs..."/>
