new compiler and executor

--- a/testtools/src/org/netbeans/modules/testtools/Bundle.properties
+++ b/testtools/src/org/netbeans/modules/testtools/Bundle.properties
@@ -17,3 +17,7 @@ Templates/TestTools/unit.group=Unit Test Type
 Templates/TestTools/simpleTest.java=Simple Test Suite
 Templates/TestTools/jemmyTest.java=Jemmy Test Suite
 Templates/TestTools/jellyTest.java=Jelly Test Suite
+Services/CompilerType/org-netbeans-modules-testtools-XTestCompiler.settings=XTest Compilation
+Services/Executor/org-netbeans-modules-testtools-XTestExecutor.settings=XTest Execution
+Templates/Services/CompilerType/org-netbeans-modules-testtools-XTestCompiler.settings=XTest Compilation
+Templates/Services/Executor/org-netbeans-modules-testtools-XTestExecutor.settings=XTest Execution
