--- a/testtools/src/org/netbeans/modules/testtools/Bundle.properties
+++ b/testtools/src/org/netbeans/modules/testtools/Bundle.properties
@@ -8,6 +8,7 @@
 # The Original Code is NetBeans. The Initial Developer of the Original
 # Code is Sun Microsystems, Inc. Portions Copyright 1997-2002 Sun
 # Microsystems, Inc. All Rights Reserved.
+# Author: <a href="mailto:adam.sotona@sun.com">Adam Sotona</a>
 
 # File names:
 Templates/TestTools=Test Tools
